# uv-practice

fastapi-app/: .dockerignore  Dockerfile  main.py  pyproject.toml
myapp/: .dockerignore  Dockerfile  hello.py  pyproject.toml
mylib/: .dockerignore  Dockerfile  pyproject.toml
mylib/src/mylib/: __main__.py
taskipy/: pyproject.toml
taskipy/tests/: test_mylib.py
