[project]
name = "mylib"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11.8"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
fmt = "task ruff_format && task ruff_fix"
ruff_format = "uvx ruff format"
ruff_fix = "uvx ruff check --fix --extend-select I"
test = "pytest -v"
pre_test = "task fmt"
